# BTSbot

./: .gitignore  CITATION.md  CNN_models.py  LICENSE  LS_dataset.py  README.md  alert_utils.py  architectures.py  architectures_torch.py  autoscan.py  bts_sweep.py  bts_sweep_val.py  bts_train.ipynb  bts_train.py  bts_train_comb.py  bts_train_reg.py  bts_val.py  bts_val_comb.py  bts_val_reg.py  compile_ZTFIDs.py  create_pd_gr.py  generate_embeddings.py  images_only.py  latent_space.ipynb  manage_data.py  metadata_only.py  misclass.ipynb  multi-input-bn.py  multi-input.py  normalization.ipynb  plot_latent_space.ipynb  pyproject.toml  query_train_data.py  remake_fig.py  requirements.txt  setup.py  torch_utils.py  train.py  train_config.json  train_config_comb.json  (+7 more)
.github/workflows/: publish.yml
autoscan/: autoscan.py  autoscan_30min.py  summarize_night.py
btsbot/: __init__.py  alert_utils.py  architectures.py  from_HF.py  inference_example.py  to_HF.py  to_onnx.py  train.py
btsbot/query_data/: __init__.py  compile_ZTFIDs.py  query_color_cutouts.py  query_train_data.py
btsbot/train_configs/: __init__.py
example_data/: usage_candidates.csv  usage_triplets.npy
models/VGG6_20220722_172713/: model_summary.txt  notes.txt  report.20220722_172713.json
models/VGG6_20220722_185747/: model_summary.txt  report.20220722_185747.json
pretraining/: query_color_cutouts.py
production_models/v0.1/: keras_metadata.pb  (+1 more)
src/: __init__.py  alert_utils.py
supporting_models/: README.md  acai_b.d1_dnn_20201130.h5  acai_h.d1_dnn_20201130.h5  acai_n.d1_dnn_20201130.h5  acai_o.d1_dnn_20201130.h5  acai_v.d1_dnn_20201130.h5
train_configs/: convnext.json  maxvit.json  mm_maxvit.json  mm_swin.json  prod_config.json  swin.json  um_cnn_config.json  um_nn_config copy.json  v2_config.json
(+13 files in other folders)
